# friendshipismagic

./: .gitignore  .gitmodules  README.md  build.gradle  compile.sh  settings.gradle
FriendshipIsMagic/: .gitignore  AndroidManifest.xml  CMakeLists.txt  build.xml
FriendshipIsMagic/assets/Config/: SoundConfig.txt  TextureConfig.txt
FriendshipIsMagic/assets/Entities/: bloc1.txt  bloc2.txt  bloc3.txt  bullet.txt  bulletL.txt  bulletR.txt  bulletgun.txt  bulletraygun.txt  bulletshotgun.txt  bulletuzi.txt  coplayer.txt  coplayerfootsensor.txt  gun.txt  healitem.txt  healthbar.txt  increasemaxlifeitem.txt  monster.txt  player.txt  playerfootsensor.txt  raygun.txt  raygunitem.txt  shotgun.txt  shotgunitem.txt  swapitem.txt  uzi.txt  uziitem.txt
FriendshipIsMagic/assets/levels/: arena0.txt
FriendshipIsMagic/cmake/: AndroidNdkGdb.cmake  config.cmake
FriendshipIsMagic/jni/: Android.mk  Application.cpp  Application.mk  Bloc.cpp  GameState.cpp  GameState.h  GraphicSystem.cpp  GraphicSystem.h  PhysicSystem.h  Player.h  ResourceHolder.h  State.cpp  StateStack.cpp  TitleState.cpp  World.hpp  aisystem.cpp  aisystem.h  application.cpp  application.h  bloc.cpp  bloc.h  collisionsystem.cpp  collisionsystem.h  filestream.cpp  gamestate.cpp  gamestate.h  graphicssystem.h  graphicsystem.cpp  graphicsystem.h  healthsystem.cpp  healthsystem.h  inputsystem.cpp  inputsystem.h  itemsystem.cpp  itemsystem.h  jsoncpp.cpp  logicsystem.cpp  logicsystem.h  main.cpp  myContactListener.h  (+27 more)
FriendshipIsMagic/jni/Config/: TextureConfig.txt
FriendshipIsMagic/jni/UDP_dev/testHello/: CMakeLists.txt
FriendshipIsMagic/jni/UDP_dev/testHello/Debug/: .gitignore
FriendshipIsMagic/jni/UDP_dev/testHello/data/: a.txt  commands.txt  player.txt
FriendshipIsMagic/jni/UDP_dev/testHello/src/: Command.h  Command.inl  Player.cpp  Player.h  player.cpp  player.h  test-hello.cpp  testHello.cpp
FriendshipIsMagic/jni/ai/ai/: aiinterface.cpp  aiinterface.h  datacontroller.cpp  datacontroller.h  monster.cpp  monster.h  monstercontroller.cpp  monstercontroller.h  player2controller.cpp  player2controller.h  playerandstuff.cpp  playerandstuff.h  stuff.cpp  stuff.h
FriendshipIsMagic/jni/ai/dijkstra/: aset.cpp  aset.h  dijkstra.cpp  dijkstra.h  pi.cpp  pi.h  previous.cpp  previous.h
FriendshipIsMagic/jni/ai/dijkstrainterface/: asetinterface.cpp  asetinterface.h  graphinterface.cpp  graphinterface.h  piinterface.cpp  piinterface.h  previousinterface.cpp  previousinterface.h  vertexinterface.cpp  vertexinterface.h
FriendshipIsMagic/jni/ai/matrix/: matrix.cpp  matrix.h
FriendshipIsMagic/jni/android/: filestreamimpl.cpp  filestreamimpl.hpp
FriendshipIsMagic/jni/codeblock/Config/: TextureConfig.txt
FriendshipIsMagic/jni/codeblock/Entities/: bullet.txt  player.txt
FriendshipIsMagic/jni/command/: command-list.h  command-message.h  command.inl  packet-explorer.h
FriendshipIsMagic/jni/core/: application.cpp  application.h  entity.h  graphicelement.h  main.cpp  world.cpp  world.h
FriendshipIsMagic/jni/friendshpismagic/Config/: TextureConfig.txt
FriendshipIsMagic/jni/network/: event-listener.h  event-listener.inl  udp-agent.cpp  udp-agent.h  udp-exception.cpp  udp-exception.h  udp-test-class.cpp
FriendshipIsMagic/jni/network/IHM/: dialogbutton.cpp
FriendshipIsMagic/jni/ressources/: filestream.cpp  filestream.hpp  resourceholder.h
FriendshipIsMagic/jni/states/: connectstate.cpp  connectstate.h  endstate.cpp  endstate.h  gamestate.cpp  gamestate.h  settings-state.cpp  settings-state.h  splash-state.cpp  splash-state.h  state.h  statestack.cpp  statestack.h  titlestate.cpp  titlestate.h  waitingstate.cpp  waitingstate.h
FriendshipIsMagic/jni/systems/: aisystem.cpp  aisystem.h  collisionsystem.cpp  collisionsystem.h  graphicsystem.cpp  graphicsystem.h  healthsystem.cpp  healthsystem.h  inputsystem.cpp  inputsystem.h  itemsystem.cpp  itemsystem.h  logicsystem.cpp  logicsystem.h  net-player-discover.cpp  net-player-discover.h  network-system.cpp  network-system.h  physicsystem.cpp  physicsystem.h  scoresystem.cpp  scoresystem.h  soundsystem.cpp  soundsystem.h  system.h  systemprovider.h  timersystem.cpp  timersystem.h  weaponsystem.cpp  weaponsystem.h
FriendshipIsMagic/jni/vanilla/: filestreamimpl.cpp  filestreamimpl.hpp
FriendshipIsMagic/res/values/: strings.xml
LevelMaker/: CMakeLists.txt
LevelMaker/src/: layer.h  main.cpp  map.h  mapelement.h  mapelementdata.h  mapelementref.h  mapvisitor.cpp  mapvisitor.h  utils.h
(+62 files in other folders)
